gitlab/3.postgresql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:13
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 5432
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - "-c"
                - pg_isready -h localhost -U gitlab -d gitlab_production
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 5432
              name: postgresql
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: postgresql-data
              subPath: data
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: gitlab
spec:
  selector:
    app: postgresql
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
