gitlab/5.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 22
    protocol: TCP
  selector:
    app: gitlab
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  namespace: gitlab
  labels:
    app: git
spec:
  ingressClassName: nginx
  rules:
  - host: git.github.icu
    http:
      paths:
      - backend:
          service:
            name: git
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - git.github.icu
    secretName: github-tls
