gitlab/6.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
  namespace: gitlab
  labels:
    app: git
spec:
  ingressClassName: nginx
  rules:
  - host: git.github.icu
    http:
      paths:
      - backend:
          service:
            name: git
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - git.github.icu
    secretName: github-tls
